<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VIEW.OdemeEkle">

    <EditText
        android:id="@+id/odemeMiktar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:hint="@string/odememiktari"
        android:inputType="number"

        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.413"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="100dp"
        android:text="@string/odememiktar"
        app:layout_constraintEnd_toStartOf="@+id/odemeMiktar"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/odemetarih"
        app:layout_constraintBottom_toBottomOf="@+id/editTextDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextDate" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:hint="Ödeme tarihini giriniz"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/odemeMiktar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/odemeMiktar"
        app:layout_constraintTop_toBottomOf="@+id/odemeMiktar"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/odemeKaydet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="140dp"
        android:onClick="btnOdemeKaydet_OnClick"
        android:text="@string/kaydet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <Button
        android:id="@+id/silbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="182dp"
        android:layout_marginStart="24dp"
        android:onClick="silBtn_OnClick"
        android:text="SİL"
        app:layout_constraintBottom_toBottomOf="@+id/odemeKaydet"
        app:layout_constraintEnd_toStartOf="@+id/odemeKaydet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/odemeKaydet" />


</androidx.constraintlayout.widget.ConstraintLayout>