<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VIEW.YeniOdemeTipi">

    <Button
        android:id="@+id/kaydet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:onClick="btnKaydet_Onclick"
        android:text="@string/kaydet"
        app:layout_constraintEnd_toEndOf="@+id/etPeriyodGun"
        app:layout_constraintStart_toStartOf="@+id/etPeriyodGun"
        app:layout_constraintTop_toBottomOf="@+id/etPeriyodGun" />

    <EditText
        android:id="@+id/etPeriyodGun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/periyodgungir"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.577"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spPeriyod"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/etOdemeTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.448"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="116dp"
        android:text="Ödeme Tipi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spPeriyod"
        android:layout_width="224dp"
        android:layout_height="48dp"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="36dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etOdemeTip"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnSil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:onClick="btnSil_OnClick"
        android:text="@string/silbtn"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/kaydet"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/kaydet"
        app:layout_constraintTop_toBottomOf="@+id/kaydet"
        app:layout_constraintVertical_bias="0.16" />

</androidx.constraintlayout.widget.ConstraintLayout>